--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,8 @@
-streamlit
-pandas
-numpy
 numpy==1.23.5
-plotly
-scikit-learn==1.3.0
-tensorflow
-statistics
+scikit-learn
+pandas
 matplotlib
-seaborn
+tensorflow==2.10.0
+plotly
+streamlit
 
