--- a/requirements.txt
+++ b/requirements.txt
@@ -2,8 +2,7 @@ numpy==1.23.5
 scikit-learn
 pandas
 matplotlib
-tensorflow
+tensorflow==2.10.0  
 plotly
-streamlit
+streamlit==1.12.0 
 setuptools
-
